# ppick

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix
.github/workflows/: tests.yml
src/: app.rs  cli.rs  ct_extra.rs  main.rs  menu.rs  numeric.rs  string.rs
src/cli/: args.rs  mod.rs
